--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </head> 
 
 <body>
-	
 	<div class="main-wrapper">
 		<div class="container px-3 px-lg-5">
 			<article class="resume-wrapper mx-auto theme-bg-light p-5 mb-5 my-5 shadow-lg">
@@ -31,15 +30,15 @@
 				<div class="resume-header">
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
-							<h2 class="resume-name mb-0 text-uppercase">Atul Singh</h2>
+							<h2 class="resume-name mb-0 text-uppercase">Atul Singh <button class="btn" onclick="((el)=>{ el.remove(); window.print(); window.location.reload()})(this)"><i class="fa fa-download" ></i></button></h2>
 							<div class="resume-tagline mb-3 mb-md-0">Senior Software Engineer</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">+91860 2723 622</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">atu108sing104@gmail.com</a></li>
-
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>India </li>
+			
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -195,6 +194,7 @@
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
 								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" target="_blank" href="https://www.linkedin.com/in/atul-singh-09713170/"><i class="fab fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted"></span></a></li>
 							</ul>
+	
 						</div><!--//resume-footer-->
 					</article>
 					
