--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						
 						<div class="col text-start">
 							<p class="mb-0">
-								Its been 6+ years since I have been solving business problems using technology.<br>
+								Its been 6 years since I have been solving business problems using technology.<br>
 								I have learnt to put different technologies together to build robust and performant systems.<br>
 								Its fun to be able to own a piece of code that eases something.<br>
 								Being in different roles like contributing individually, leading a team or managing a product, is what I love about my work.<br>
