--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 										<li class="mb-2">Python<li>
 											<li class="mb-2">Node.js</li>
 											<li class="mb-2">PostgreSQL/MySQL/MongoDb</li>
+											<li class="mb-2">AWS</li>
 											<li class="mb-2">Design and implement database structures</li>
 											<li>Lead and deliver complex software systems</li>
 										</ul>
