--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 									<div class="item-content">
 	
 										<ul class="resume-list">
-											<li>Increased operations productivity by 50% by designing inspection, inventory managment applications.</li>
+											<li>Increased operations productivity by 50% by designing inspection, inventory management applications.</li>
 											<li>Increased user conversion by 30% by designing seamless user onboarding.</li>
 											<li>Automated 90% manual credit verification cases.</li>
-											<li>Helped increase sales and enhance marketing techniques by tracking user behaviour.</li>
+											<li>Helped increase sales and enhance marketing techniques by tracking user behavior.</li>
 										</ul>
 									</div>
 								</div><!--//item-->
@@ -109,8 +109,8 @@
 									<div class="item-content">
 										
 										<ul class="resume-list">
-											<li>Increased application performace by re-architecting it.</li>
-											<li>Reduced manual effort by implimenting used car price comparision tool.</li>
+											<li>Increased application performance by re-architecture.</li>
+											<li>Reduced manual effort by implementing used car price comparison tool.</li>
 											<li>Database design</li>
 										</ul>
 									</div>
@@ -123,8 +123,8 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Implimented auto co-relation alogorithms to generate Jmeter script without manual intervention.</li>
-											<li>Generated performace report based on user load and decreased script creation time by 70% with script accuracy of more than 80%.</li>
+											<li>Implemented auto co-relation algorithms to generate Jmeter script without manual intervention.</li>
+											<li>Generated performance report based on user load and decreased script creation time by 70% with script accuracy of more than 80%.</li>
 										</ul>
 									</div>
 								</div><!--//item-->
