--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>Atul Singh - Software Developer</title>
+	<title>Atul Singh - Senior Software Engineer</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
