--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="resume-header">
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
-							<h2 class="resume-name mb-0 text-uppercase">Atul Singh <button class="btn" onclick="((el)=>{ el.remove(); window.print(); window.location.reload()})(this)"><i class="fa fa-download" ></i></button></h2>
+							<h2 class="resume-name mb-0 text-uppercase">Atul Singh <button class="btn" onclick="((el)=>{alert('Please follow below settings for better results\n\nLayout: Portrait, Paper Size: A2, Margins: None, Scale:Default, Background Graphics: true \n\n\n Thank you for considering my profile!'); el.remove(); window.print(); window.location.reload()})(this)"><i class="fa fa-download" ></i></button></h2>
 							<div class="resume-tagline mb-3 mb-md-0">Senior Software Engineer</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
