--- a/index.html
+++ b/index.html
@@ -156,9 +156,11 @@
 										<ul>
 											<li class="mb-2">Technical:</li>
 											<ul>
-											  <li class="mb-2">JavaScript (Angular)</li>
+											  <li class="mb-2">JavaScript</li>
 											  <li class="mb-2">Python</li>
-											  <li class="mb-2">Node.js</li>
+											  <li class="mb-2">NodeJs</li>
+											  <li class="mb-2">NestJs</li>
+											  <li class="mb-2">ExpressJs</li>
 											  <li class="mb-2">PostgreSQL</li>
 											  <li class="mb-2">MySQL</li>
 											  <li class="mb-2">MongoDB</li>
@@ -169,12 +171,6 @@
 											  <li class="mb-2">Robust system development</li>
 											  <li class="mb-2">Code integration</li>
 											  <li class="mb-2">Software architecture</li>
-											</ul>
-											<li class="mb-2">Project Management:</li>
-											<ul>
-											  <li class="mb-2">Agile methodologies</li>
-											  <li class="mb-2">Project planning and execution</li>
-											  <li class="mb-2">Team leadership</li>
 											</ul>
 											<li class="mb-2">Communication and Collaboration:</li>
 											<ul>
